# ImageProcessingBla

./: CMakeLists.txt  iptest.cpp  main.cpp  test1.xml  test10.xml  test11.xml  test12.xml  test13.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  test7.xml  test8.xml  test9.xml  testip.xml  xmlparsetest.cpp
FullImg/: CMakeLists.txt  FullImg.cpp  FullImg.hpp
IPState/: CMakeLists.txt  IPState.cpp  IPState.hpp
IPXMLParser/: CMakeLists.txt  IPXMLParser.cpp  IPXMLParser.hpp
ImageProcessing/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.hpp
ROI/: CMakeLists.txt  FullImg.cpp  FullImg.hpp  ROI.cpp  ROI.hpp
